--- a/templates/upload.html
+++ b/templates/upload.html
@@ -7,6 +7,16 @@
          <input type = "submit"/>
       </form>
 
+
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+    <ul class=flashes>
+      <h3>{{ messages[0] | safe}}</h3>
+    </ul>
+    {% endif %}
+    {% endwith %}
+
+
    {% if dup_code %}
     <h1>Mã môn bị trùng</h1>
         <ul>
